# xai-clustering

./: .gitignore  README.md  artifacts.ipynb  brain_tumor_datasets.ipynb  download-datasets.ipynb  execute-cnn.ipynb  execute-convnet.ipynb  execute-dconvnet.ipynb  execute-dvgg-pca.ipynb  execute-dvgg.ipynb  execute-vgg-deep-cluster.ipynb  execute-vgg-transfer-learning.ipynb  execute-vgg.ipynb  feature-analysis.ipynb  interpretation.ipynb  jupyter_notebook_config.py  metrics-analysis-cnn.ipynb  metrics-analysis-vgg-deep.ipynb  metrics-analysis-vgg.ipynb  metrics-analysis.ipynb  models-comparison.ipynb  pyproject.toml  requirements.txt
data/: base.py  brain_tumor_mri.py  cluster.py
helpers/: metrics.py  prediction.py
interpret/: layer_wise_rp.py  lrp.py  lrp2.py
models/: base.py  callbacks.py  clustering.py  cnn.py  cnn_deep.py  processors.py  timer.py  vgg.py  vgg_deep.py
report/: __init__.py  attributions.py  lwrp.py  plots.py  shap.py  tsne.py  umap.py
sagemaker-terraform/: sagemaker.tf  variables.tf
sagemaker-terraform/assets/auto_shutdown_template/: autoshutdown-script.sh
tests/: conftest.py  fixtures.py  test_lrp.py  test_lrp_2.py
viz/: lwrp.py  plots.py  tsne.py  umap.py
