[tool.poetry]
name = "xai-clustering"
version = "0.1.0"
description = ""
authors = ["Arthur Alvim <afmalvim@gmail.com>"]
readme = "README.md"
packages = [{include = "xai_clustering"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.3.0"
interpret = "^0.4.3"
pytorch-lightning = {extras = ["extra"], version = "^2.0.9"}
torchsummary = "^1.5.1"
pydantic = "^2.3.0"
faiss-cpu = "^1.7.4"
seaborn = "^0.12.2"
shap = "^0.42.1"
jupyter = "^1.0.0"
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
